# mind-map

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUBPARTS.md  INTEGRATION_PLAN.md  LICENSE  MIND_MAP_MODULARIZATION_PLAN.md  OPENCLAW_AGENT_IMPLEMENTATION_PLAN.md  OPENCLAW_AGENT_MIGRATION_PLAN.md  PLAN.Backend.md  PLAN.FileIngestion.md  PLAN.Frontend.md  PROGRESS.md  README-PROJECT.md  README.md  TEST.md  TEST321.md  TODO.md  config.yaml  pyproject.toml
docs/: MIND_MAP_HERMES_INTEGRATION.md  MIND_MAP_OPENCLAW_INTEGRATION.md  filter-agent-ollama-minimax-fallback-plan.md  memo-pipeline-refactor-plan.md
e2e/: README.md  node-deletion.spec.js  package-lock.json  package.json  playwright.config.js
e2e/test-results/: .last-run.json
e2e/test-results/node-deletion-node-deletio-44070-s-node-and-closes-inspector-chromium/: error-context.md
e2e/test-results/node-deletion-node-deletio-6da48-delete-confirmation-message-chromium/: error-context.md
e2e/test-results/node-deletion-node-deletio-c5752-rm-delete-→-node-disappears-chromium/: error-context.md
frontend/: .gitignore  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts
src/mind_map/: __init__.py
tests/: __init__.py  test_api_routes.py  test_claude_cli_llm.py  test_cli_retrieve.py  test_filter_fallback.py  test_graph_store.py  test_mcp_health.py  test_mcp_prune.py  test_mcp_report.py  test_memo_cli_modes.py  test_openai_connection.py  test_pipeline.py  test_processing_llm_providers.py
(+67 files in other folders)
